# tempomodel

./: .gitignore  LICENSE  README.md  inference.py
misc/: synthetic_caption.py
mochi/: README.md  pyproject.toml
mochi/contrib/: README.md
mochi/contrib/modal/: lora.yaml  main.py  readme.md
mochi/demos/: api_example.py  cli.py  gradio_ui.py  test_encoder_decoder.py
mochi/demos/fine_tuner/: README.md  dataset.py  embed_captions.py  encode_videos.py  preprocess.bash  run.bash  train.py  trim_and_crop_videos.py
mochi/demos/fine_tuner/configs/: lora.yaml
mochi/scripts/: download_weights.py  format.bash  pytorch_to_safe_tensors.py  typecheck.bash
mochi/src/genmo/lib/: attn_imports.py  utils.py
mochi/src/genmo/mochi_preview/: pipelines.py
mochi/src/genmo/mochi_preview/dit/joint_model/: asymm_models_joint.py  audio_adapter.py  context_parallel.py  layers.py  lora.py  mod_rmsnorm.py  residual_tanh_gated_rmsnorm.py  utils.py
mochi/src/genmo/mochi_preview/vae/: cp_conv.py  models.py  vae_stats.py
vlm_eval/videollama2/: mm_utils.py
vlm_eval/videollama2/serve/: gradio_web_server_adhoc_av.py
