[project]
name = "genmo"
version = "0.1.0"
description = "Genmo models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "addict>=2.4.0",
    "av==13.1.0",
    "click>=8.1.7",
    "einops>=0.8.0",
    "gradio>=3.36.1",
    "moviepy==1.0.3",
    "omegaconf>=2.3.0",
    "pillow==9.5.0",
    "pyyaml>=6.0.2",
    "ray>=2.37.0",
    "sentencepiece>=0.2.0",
    "setuptools>=75.2.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.45.2",
]

[project.optional-dependencies]
flash = [
    "flash-attn>=2.6.3"
]

torchvision = [
    "torchvision>=0.15.0",
    "pyav>=13.1.0"
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
